--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true, 
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src", "declaration.d.ts"],
   "ts-node": {
