--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.9.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "react-refresh": "^0.14.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
+    "type-fest": "^4.8.3",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
@@ -33,8 +38,13 @@
   "dependencies": {
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.11",
+    "i18next": "^23.7.11",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^13.5.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0"
   }
 }
