--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.9.0",
+    "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
@@ -27,6 +32,8 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard-scss": "^12.0.0",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "type-fest": "^4.8.3",
@@ -37,7 +44,6 @@
   },
   "dependencies": {
     "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.11",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
